--- a/theme/templates/shop/product.html
+++ b/theme/templates/shop/product.html
@@ -113,7 +113,7 @@
 				<img src="{{ MEDIA_URL }}{% thumbnail product.user.shop.image 80 80 %}" class="pull-left margin-right-5">
 				<h2>{{ product.user.shop.shopname }}</h2>
 			</a>
-			<p><i class="fa fa-map-marker"></i> <strong>{{ product.user.shop.country }}, {{ product.user.shop.city }}</strong><p>
+			<p><i class="fa fa-map-marker"></i> <strong>{{ product.user.profile.country }}, {{ product.user.profile.city }}</strong><p>
 		</div>	
 	</section>
 	</div>
