--- a/theme/templates/admin/index.html
+++ b/theme/templates/admin/index.html
@@ -78,6 +78,9 @@
                     <li>
                         <a class="btn btn-sm btn-inverse btn-raised btn-label" href="{% url 'admin:theme_orderitem_changelist' %}"><i class="fa fa-list"></i> Мои заявки</a>
                     </li>
+                    <li>
+                        <a class="btn btn-sm btn-default btn-raised btn-label" href="{% url 'admin:theme_orderitem_changelist' %}">Отклики</a>
+                    </li>
                 </ul>
                 <div class="pull-left">
                     <h4 class="mt-n mb-n pt-xs"><small class="mt-n mb-sm">Всего заявок</small>0</h4>
