--- a/theme/templates/accounts/account_shop_create.html
+++ b/theme/templates/accounts/account_shop_create.html
@@ -242,6 +242,7 @@ $(document).ready(function() {
 				</div>
 				<div class="express_price">
 					{{ form.express_point_price }}
+					{{ form.express_point_price.errors }}
 				</div>
 			</div>
 			<div class="express">
@@ -254,6 +255,7 @@ $(document).ready(function() {
 				</div>
 				<div class="express_price">
 				{{ form.express_city_price }}
+				{{ form.express_city_price.errors }}
 				</div>
 			</div>
 
@@ -267,6 +269,7 @@ $(document).ready(function() {
 				</div>
 				<div class="express_price">
 					{{ form.express_country_price }}
+					{{ form.express_country_price.errors }}
 				</div>
 			</div>
 
@@ -280,6 +283,7 @@ $(document).ready(function() {
 				</div>
 				<div class="express_price">
 				{{ form.express_world_price }}
+				{{ form.express_world_price.errors }}
 				</div>
 			</div>
 
@@ -293,6 +297,7 @@ $(document).ready(function() {
 				</div>
 				<div class="express_price">
 				{{ form.express_mail_price }}
+				{{ form.express_mail_price.errors }}
 				</div>
 			</div>
 
