--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -1,3 +1,138 @@
+/* slider */
+
+.bss-slides {
+    position: relative;
+    display: block;
+    width: 100%;
+    max-height: 350px;
+}
+
+
+.bss-slides:focus {
+    outline: 0;
+}
+
+.bss-slides figure {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    overflow: hidden;
+}
+
+.bss-slides figure:first-child {
+    position: relative;
+}
+
+.bss-slides figure img {
+    display: inherit;
+    opacity: 0;
+    -webkit-transition: opacity 1.2s;
+    transition: opacity 1.2s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: relative;
+    width: auto!important;
+    height: 350px!important;
+    max-width: inherit !important;
+    /*margin:0 -100%;*/
+    /*transform: translateX(-50%);*/
+}
+
+.bss-slides .bss-show {
+    z-index: 2;
+}
+
+.bss-slides .bss-show img {
+    opacity: 1;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: relative;
+}
+
+.bss-slides figcaption {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    padding: .25em;
+    border-radius: 2px;
+    opacity: 0;
+    -webkit-transition: opacity 1.2s;
+    transition: opacity 1.2s;
+    text-shadow: 1px 1px 2px black, 0 0 1em black;
+}
+
+.bss-slides .bss-show figcaption {
+    z-index: 3;
+    opacity: 1;
+}
+
+.bss-slides figcaption h1,
+.bss-slides figcaption h2,
+.bss-slides figcaption h3,
+.bss-slides figcaption h4,
+.bss-slides figcaption h5,
+.bss-slides figcaption h6,
+.bss-slides figcaption a,
+.bss-slides figcaption p {
+    color: #fff;
+    line-height: 1.1;
+}
+
+.bss-slides figcaption h1 {
+    font-size: 4.5em;
+}
+.bss-slides figcaption h2 {
+    font-size: 3.5em;
+}
+.bss-slides figcaption h3 {
+    font-size: 2.5em;
+}
+.bss-slides figcaption h4 {
+    font-size: 1.5em;
+}
+.bss-slides figcaption h5, .bss-slides figcaption h6 {
+    font-size: 1em;
+}
+
+.bss-next,
+.bss-prev {
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    z-index: 4;
+    font-size: 2em;
+    line-height: 1.2em;
+    margin-top: -1.2em;
+    opacity: .5;
+    padding: 5px 10px 11px 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: black;
+}
+
+.bss-next:hover,
+.bss-prev:hover {
+    cursor: pointer;
+    opacity: 1;
+    background-color: #3acf87;
+}
+
+.bss-next {
+    right: 0;
+}
+
+.bss-prev {
+    left: 0;
+}
+
+
 #logo {
     margin-bottom: 5px;
     margin-top: 15px
@@ -26,7 +161,7 @@ a.button.light:hover {
     background: #606060;
     width: 167px;
     position: absolute;
-    top: 163px;
+    top: 155px;
     z-index: 26;
     left: -167px;
     transition: all .5s ease-out;
@@ -156,11 +291,14 @@ a.button.light:hover {
     width: 100%
 }
 
-.tp-banner,
+
+
+
+/*.tp-banner,
 .tp-bgimg,
 .home-slider {
     max-height: 380px!important
-}
+}*/
 
 .help-block {
     color: red
@@ -272,6 +410,10 @@ li.dropdown ul li ul {
 
 .menu>li .current {
     color: #fff
+}
+
+.menu>li a {
+    width: 100%;
 }
 
 #jPanelMenu-menu li li a {
@@ -407,39 +549,7 @@ figure.blue-effect img {
     height: 100px
 }
 
-ul.top-bar-menu li:hover a,
-ul.top-bar-menu li:hover i {
-    -webkit-transition: color .35s;
-    color: #2c9c66;
-    transition: color .35s
-}
 
-#logo-menu {
-    float: right;
-    margin: 10px;
-    position: relative
-}
-
-#logo-menu a {
-    color: #fff
-}
-
-.create-shop,
-.enter-shop {
-    position: absolute
-}
-
-.create-shop {
-    left: 100px;
-    top: 5px
-}
-
-.enter-shop {
-    background-color: #008275;
-    left: 180px;
-    padding: 5px 2px;
-    top: 84px
-}
 
 .caption-btn {
     -moz-box-shadow: 0 0 27px -10px rgba(0, 0, 0, 0.75);
@@ -500,52 +610,21 @@ ul.top-bar-menu li:hover i {
     text-align: center
 }
 
-.order-content {
-    margin-left: 210px
-}
-
-.order-content h2 {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 30px;
-    margin: 0 0 2px
-}
-
-.order-content h2 a {
-    color: #606060
-}
-
-.order-content h2 a:hover {
-    color: #888
-}
-
-.order-desc {
-    /*min-height: 200px*/
-}
-
 @media (max-width: 767px) {
 
     #style-switcher {
         top: 292px;
     }
-    .order-container {
-        display: grid
+    .cd-dropdown-wrapper {
+        width: 100%;
     }
-
-    .order-content {
-        margin-left: 0
+    .cd-dropdown-trigger::before {
+        left: 95px;
+        /*right: 63%;*/
     }
-
-    .order-thumb {
-        text-align: center
-    }
-
-    .order-thumb img {
-        width: 300px
-    }
-
-    .order-desc {
-        min-height: 50px
+    .cd-dropdown-trigger::after {
+        left: 100px;
+        /*right: calc(63% - 5px);*/
     }
 }
 
@@ -1122,9 +1201,11 @@ input[type="password"],
     margin-right: 0px;
     margin-bottom: 10px;
 }
+
 .main-page-category a.img-caption {
     margin: 0;
 }
+
 .main-page-category a.img-caption figcaption {
     padding: 10px;
     width: 95%;
@@ -1379,4 +1460,13 @@ input[type="password"],
         /*height: auto;*/
         margin-left: 10px;
     }
+}
+.red {
+    background-color: #c62020;
+}
+.pull-left {
+    float: left!important;
+}
+.pull-right {
+    float: right!important;
 }
