--- a/theme/templates/errors/404.html
+++ b/theme/templates/errors/404.html
@@ -11,11 +11,11 @@
 {% endblock %}
 
 {% block main %}
-<div class="col-md-9 box">
-<div class="panel panel-danger">
-	<div class="panel-heading"><h3 class="panel-title">{% trans "Page not found" %}</h3></div>
-	<div class="panel-body">{% trans "The page you requested does not exist." %}</div>
-</div>
+<div class="sixteen columns">
+    <section id="not-found">
+        <h2>404 <i class="fa fa-question-circle"></i></h2>
+        <p>{% trans "The page you requested does not exist." %}</p>
+    </section>
 </div>
 {% endblock %}
 
